src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Lost Opportunity</fullName>
        </values>
        <values>
            <fullName>Closed - Won Opportunity</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Rep Created</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Open - Rep Created</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_External_Id_Aperity__c</fullName>
        <externalId>true</externalId>
        <label>Account External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualBottlesofFirstFulfillment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Actual Bottles of First Fulfillment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bottle_Size__c</fullName>
        <label>Bottle Size</label>
        <picklist>
            <picklistValues>
                <fullName>50 ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100 ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200 ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>375 ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>750 ML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75 L</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BrandLevelLLDescription__c</fullName>
        <label>Brand Level LL Description - DELETE?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandLevelLLKeyID__c</fullName>
        <externalId>true</externalId>
        <label>Brand Level LL Key ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandLevelLLKey__c</fullName>
        <label>Brand Level LL Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandVarietyDescription__c</fullName>
        <label>Brand Variety Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BrandVariety__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Variety</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tags__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Brand Variety</value>
            </filterItems>
            <filterItems>
                <field>Tags__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tags__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClusterDescription__c</fullName>
        <label>Cluster Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClusterKey__c</fullName>
        <label>Cluster Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateofFulfillment__c</fullName>
        <inlineHelpText>Shipment Date.</inlineHelpText>
        <label>Date of Fulfillment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedBottlesofFirstFulfillment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Expected Bottles of First Fulfillment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Fulfillment__c</fullName>
        <inlineHelpText>Estimated date of when the account expects to receive the product (if known).</inlineHelpText>
        <label>Expected Date of Fulfillment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id_Aperity__c</fullName>
        <externalId>true</externalId>
        <label>External Id Aperity</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FocusBrandTypes__c</fullName>
        <label>Focus Brand Types</label>
        <picklist>
            <picklistValues>
                <fullName>Pillar Brand</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuantityTypeDescription__c</fullName>
        <label>Quantity Type Description</label>
        <picklist>
            <picklistValues>
                <fullName>Bottles</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QuantityTypeKey__c</fullName>
        <label>Quantity Type Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ReasonWonorLost__c</fullName>
        <label>Reason Won or Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Customer Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t Sell Before</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not on Cocktail Menu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Relevant for Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Popular Demand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taste</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aperity Driven</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Detail__c</fullName>
        <description>This field allows the user to add more detail regarding the reason won or lost.</description>
        <inlineHelpText>Please indicate more detail regarding the reason won or lost, especially if you selected &quot;Other&quot; as the reason won or lost.</inlineHelpText>
        <label>Reason Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SimilarTotalAllClusterEQ__c</fullName>
        <label>Similar - Total All Cluster EQ</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SimilarTotalAllClusterPlacements__c</fullName>
        <label>Similar - Total All Cluster Placements</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SimilarTotalPHY__c</fullName>
        <description>Number of physical case placements for this Brand Variety in similar stores.</description>
        <inlineHelpText>Number of physical case placements for this Brand Variety in similar stores.</inlineHelpText>
        <label>Similar - Total PHY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SimilarTotalPlacements__c</fullName>
        <description>Number of total 9L placements for this Brand Variety in similar stores.</description>
        <inlineHelpText>Number of total 9L placements for this Brand Variety in similar stores.</inlineHelpText>
        <label>Similar - Total Placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SizeDescription__c</fullName>
        <label>Size Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SizeKey__c</fullName>
        <label>Size Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SourceKey__c</fullName>
        <label>Source Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Account Segmentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Cluster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rep Created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StageLastModified__c</fullName>
        <label>Stage Last Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StatusKey__c</fullName>
        <label>Status Key</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StoreAllClusterMO12EQLY__c</fullName>
        <label>Store All Cluster MO 12 EQ LY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoreAllClusterMO12EQ__c</fullName>
        <label>Store All Cluster MO 12 EQ</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoreAllClusterMO12PlacementsLY__c</fullName>
        <label>Store All Cluster MO 12 Placements LY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoreAllClusterMO12Placements__c</fullName>
        <label>Store All Cluster MO 12 Placements</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StoreID__c</fullName>
        <externalId>true</externalId>
        <label>Store ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreSellsSize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Store Sells Size</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeKey__c</fullName>
        <label>Type Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12MORADPHYLY__c</fullName>
        <description>Physical case retail volume for this Account last year (rolling).</description>
        <inlineHelpText>Physical case retail volume for this Account last year (rolling).</inlineHelpText>
        <label>12 MO RAD PHY LY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12MORADPHYTY__c</fullName>
        <description>Physical case retail volume for this Account in the last 12 months (rolling).</description>
        <inlineHelpText>Physical case retail volume for this Account in the last 12 months (rolling).</inlineHelpText>
        <label>12 MO RAD PHY TY</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpenOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Open - Aperity Provided</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyLostOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed - Lost Opportunity</value>
        </filters>
        <label>My Lost Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyOpenOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Open - Aperity Provided</value>
        </filters>
        <label>My Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>MyWonOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed - Won Opportunity</value>
        </filters>
        <label>My Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>WonOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ReasonWonorLost__c</columns>
        <columns>ExpectedBottlesofFirstFulfillment__c</columns>
        <columns>ActualBottlesofFirstFulfillment__c</columns>
        <columns>DateofFulfillment__c</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed - Won Opportunity</value>
        </filters>
        <label>All Won Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>Aperity_Driven</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <description>Distribution opportunities generated by Aperity</description>
        <label>Aperity Driven</label>
    </recordTypes>
    <recordTypes>
        <fullName>Beam_Driven</fullName>
        <active>true</active>
        <businessProcess>Default</businessProcess>
        <description>Distribution opportunities created by field reps</description>
        <label>Beam Driven</label>
    </recordTypes>
    <recordTypes>
        <fullName>Beam_Driven_Create_Only</fullName>
        <active>true</active>
        <businessProcess>Rep Created</businessProcess>
        <description>Used for creation of rep-created distribution opportunities</description>
        <label>Beam Driven - Create Only</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>OpportunityNameEditing</fullName>
        <active>true</active>
        <description>Opportunity Names can only be edited by the System Admin Profile. This will ensure that opportunity names are only updated through the integration and not by any Sales 360 users without a System Admin Profile.</description>
        <errorConditionFormula>ISCHANGED(Name)&amp;&amp; 
NOT(OR(
$Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;System Administrator with Bulk Hard Delete&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Opportunity Name cannot be edited as Opportunity Name is controlled by Aperity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Reason_Detail_if_Other_Selected</fullName>
        <active>true</active>
        <description>Require a value within the &quot;Reason Detail&quot; field if &quot;Other&quot; is selected as the &quot;Reason Won or Lost&quot;</description>
        <errorConditionFormula>IF( ISPICKVAL(ReasonWonorLost__c, &apos;Other&apos;), If( ISBLANK( Reason_Detail__c ), true, false), false)</errorConditionFormula>
        <errorMessage>Please explain why the opportunity was won or lost in the Reason Detail field.</errorMessage>
    </validationRules>
</CustomObject>